--- a/src/blocks/popup/__img/popup__img.css
+++ b/src/blocks/popup/__img/popup__img.css
@@ -1,7 +1,10 @@
 .popup__img {
+  width: 120px;
+  height: 120px;
   max-width: 75vw;
   max-height: 75vh;
   object-fit: cover;
+  padding-top: 60px;
 }
 
 @media screen and (max-width: 768px) {
