--- a/src/index.css
+++ b/src/index.css
@@ -68,5 +68,7 @@
 @import url(./blocks/popup/__button/popup__button.css);
 @import url(./blocks/popup/__button/_inactive/popup__button_inactive.css);
 @import url(./blocks/popup/__figure/popup__figure.css);
+@import url(./blocks/popup/__wrap/popup__wrap.css);
+@import url(./blocks/popup/__caption/popup__caption.css);
 @import url(./blocks/popup/__img/popup__img.css);
 @import url(./blocks/popup/__descr/popup__descr.css);
