--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
 @import url(./blocks/header/__link/header__link.css);
+@import url(./blocks/header/__wrap/header__wrap.css);
+@import url(./blocks/header/__email/header__email.css);
 
 /* Login */
 @import url(./blocks/login/login.css);
